plugins {
    id 'java-library'
    id 'kotlin'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
    implementation "junit:junit:$junit_version"
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
}